--- a/前端简历.html
+++ b/前端简历.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>个人简历——刘敬萱</title>
 <style type="text/css">
-@import url(../../../Library/Containers/com.tencent.xinWeChat/Data/Library/Application Support/com.tencent.xinWeChat/2.0b4.0.9/c70e00678f2e1ebe23386cb894fa9e53/Message/MessageTemp/41ff85f3c0e099bd0da03a44eee6d05e/File/前端简历/div.css);
+@import url(div.css);
 </style>
 </head>
 
