Update and rename 前端简历.html to curriculum-vitae.html

--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -21,7 +21,7 @@
 				<th>女</th>
 				<th>出生年月</th>
                 <th>1996-03</th>
-                <th rowspan="3" colspan="2"><img src="../../../Library/Containers/com.tencent.xinWeChat/Data/Library/Application%20Support/com.tencent.xinWeChat/2.0b4.0.9/c70e00678f2e1ebe23386cb894fa9e53/Message/MessageTemp/41ff85f3c0e099bd0da03a44eee6d05e/File/前端简历/简历照片.jpg" /></th>
+                <th rowspan="3" colspan="2"><img src="简历照片.jpg" /></th>
 			</tr>
 			<tr>
 				<th>民族</th>
